--- a/_posts/2022-06-22-creative2.md
+++ b/_posts/2022-06-22-creative2.md
@@ -18,7 +18,7 @@ When they heard that Avery and I were planning to have a baby, all my friends we
 
 Her eyes widened. "That's amazing! I'm so happy for you!" And without pausing long enough for me to thank her for her enthusiasm, "Have you figured out how you're going to brood it?"
 
-"I'm torn," I said. "Avery wants to us to brood it ourselves, but my work only gives two months of maternity leave, so even if he brooded two out of the three months and I only took one, that would still only leave me one month to spend at home with the baby. I think it's more important to have the full two months after hatching, when you can actually interact with the baby. Right?"
+"I'm torn," I said. "Avery wants us to brood it ourselves, but my work only gives two months of maternity leave, so even if he brooded two out of the three months and I only took one, that would still only leave me one month to spend at home with the baby. I think it's more important to have the full two months after hatching, when you can actually interact with the baby. Right?"
 
 Wren nodded sagely. "That's what Jay and I thought as well. That's why we had our au pair do the brooding, and then we took our parental leave after hatching. Of course, the au pair still helped us night nurse--I'd *highly* recommend it if you can. If you can have the same au pair stay on after hatching, her rapport with the baby is really helpful in getting him or her to calm down quickly. I think her voice reminded our little Griff of being back in the egg!"
 
@@ -40,7 +40,7 @@ Wren and I exchanged a glance, stiff smiles on both of our faces. "Thanks for th
 
 A couple of days later, I was on my weekly jog with Robin when I broke the news to her.
 
-"No way!" she excalimed, turning to jog backward so she could look me up and down. "I did think your complexion looked really glowy today."
+"No way!" she exclaimed, turning to jog backward so she could look me up and down. "I did think your complexion looked really glowy today."
 
 I laughed. "I'm pretty sure that's sweat and sunburn."
 
@@ -124,7 +124,7 @@ As we all took our places at the table, mine in front of a rather well-done burg
 
 ------------------------------
 
-We ended up with the sample startup incubator Wren had offered to hook us up with. It was very high tech--it had a tablet-like display where you could view graphs of your egg's vitals over time, see pictures of what the fetus would look like at that time (and to what fruit it was currently comparable in size), and select a stimulatory regimen based on what you wanted your kid to be: classical music for mathematicians and violinists, new age music for the emotionally intelligent, podcasts and public radio for intellectuals, recordings of your voice to encourage bonding. A cushioned pedestal with soft actuators could rock and roll the egg gently. A mobile app allowed you to monitor the egg from anywhere. And of course the device looked like a clean, featureless white box with tinted windows. In return for utilizing this miracle of technology, we had to fill out daily surveys through the app about how we were enjoying the various aspects of its functionality. How intuitive was the UI? How confident were we that it was doing a good job? How much do we like the entertainment choices? Where is it located in the house? We never would've sprung for something so *extra* if we hadn't had the opportunity to use it for free.  The incubator even would've told us the baby's gender, but we chose to keep it a surprise.
+We ended up with the sample startup incubator Wren had offered to hook us up with. It was very high tech--it had a tablet-like display where you could view graphs of your egg's vitals over time, see pictures of what the fetus would look like at that time (and to what fruit it was currently comparable in size), and select a stimulatory regimen based on what you wanted your kid to be: classical music for mathematicians and violinists, new age music for the emotionally intelligent, podcasts and public radio for intellectuals, recordings of your voice to encourage bonding. A cushioned pedestal with soft actuators could rock and roll the egg gently. A mobile app allowed you to monitor the egg from anywhere. And of course the device looked like a clean, featureless white box with tinted windows. In return for utilizing this miracle of technology, we had to fill out daily surveys through the app about how we were enjoying the various aspects of its functionality. How intuitive was the UI? How confident were we that it was doing a good job? How much did we like the entertainment choices? Where is it located in the house? We never would've sprung for something so *extra* if we hadn't had the opportunity to use it for free.  The incubator even would've told us the baby's gender, but we chose to keep it a surprise.
 
 When it was close to hatching time, the incubator gave us lots of alerts on our phones and on its screen. It said we could take the egg out now and hold it, but hatching might take hours, or we could wait until the first crack formed, and the device would let us know when that happened so we could rush over.  Avery wanted to hold it, so we powered down the device for the first time in months and sat on the couch with our leathery little grapefruit. It was midmorning on a Thursday, both of us having started our parental leave that Monday in anticipation.
 
